--- a/.github/workflows/ort-scan.yml
+++ b/.github/workflows/ort-scan.yml
@@ -14,8 +14,7 @@ jobs:
           ort-config-repository: 'https://github.com/daniel-eder/ort-config'
           ort-config-revision: '95d676332b76b12c685167857722e489809c31b4'
       - name: 
-        uses: actions/github-script@v6
-        id: my-script
+        id: print-result-tree
         run: tree -d ~/.ort > ~/result.tree.txt
       - uses: actions/upload-artifact@v3
         with:
