enable caching scan results

--- a/.github/workflows/ort-scan.yml
+++ b/.github/workflows/ort-scan.yml
@@ -15,6 +15,7 @@ jobs:
           # manually set steps to run to include scanner
           run: > 
             cache-dependencies,
+            cache-scan-results,
             metadata-labels,
             analyzer,
             scanner,
